Fix the most common case of side scrolling on mobile safari

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,8 @@
 html {
     -webkit-text-size-adjust: none;
+    word-wrap: break-word;
     word-wrap: anywhere;
+    word-break: break-word;
 }
 
 html,
